k8s/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetup-app
spec:
  selector:
    matchLabels:
      app: meetup-app
  replicas: 1
  template:
    metadata:
      labels:
        app: meetup-app
    spec:
      containers:
      - name: meetup-app
        image: iterisfpi/meetup-argocd:2.1 # Imagem do container
        ports:
        - containerPort: 5000 # Porta do container
