k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meetup-app
spec:
  selector:
    app: meetup-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
